--- a/app/globals.css
+++ b/app/globals.css
@@ -52,3 +52,18 @@ body {
   border-radius: 6px;
   text-decoration: none;
 }
+
+.spotlight {
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  background: radial-gradient(
+    400px circle at var(--x) var(--y),
+    rgba(255, 255, 255, 0.25),
+    transparent 40%
+  );
+  transition: all 0.5s ease;
+}
