--- a/app/globals.css
+++ b/app/globals.css
@@ -2,14 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --font-secondary: 'Aeonik';
+  }
+}
 
+.font-primary {
+  font-family: var(--font-geist-mono);
+}
+
+.font-secondary {
+  font-family: var(--font-secondary);
+}
 
 body {
-  font-family: var(--font-primary, Arial), var(--font-secondary, Helvetica);
+  font-family: var(--font-geist-mono), var(--font-secondary);
 }
 
 .title{
-  font-family: var(--font-primary), Arial;
+  font-family: var(--font-geist-mono);
   color: #FFF;
   text-align: center;
   font-size: 48px;
@@ -24,7 +36,7 @@ body {
 .title-subtext{
   color: #FFF;
   text-align: center;
-  font-family: var(--font-secondary), Helvetica;
+  font-family: var(--font-secondary);
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
@@ -44,7 +56,7 @@ body {
 .button{
   background-color: #FFF;
   color: #000000;
-  font-family: var(--font-secondary), Arial;
+  font-family: var(--font-secondary);
   font-size: 16px;
   font-weight: 700;
   line-height: normal;
